1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4 (md_CHECK_DLL): Add --add-stdcall-alias and --entry
        __cygwin_noncygwin_dll_entry@12 to dllwrap.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acconfig.h: Add EXPORT_EXTERN, EXPORT_EXTERNDEF, and IMPORT_EXTERN.

1999-06-19  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* ltconfig: Don't use +I for hpux9.  Use hpux9 code for hpux10,
	since there isn't a preprocessor symbol for hpux10.
	(We'll call the constructors manually.)
	For constructor name, remove everything after first "." -- this
	avoids the version number, which is a pain if encoded into source
	code calls.   

1999-06-13  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* sendmsg.c (__objc_double_forward): Special case for double
	returns on alpha.  [Danger: empirically determined!]

1999-06-11  Alex Lancaster  <alex@santafe.edu>

	* configure.in: Add "-I m4" to aclocal, if it exists.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* configure.in: Use AM_CONFIG_HEADER to extract externvar.h,
	not an AC_OUTPUT entry.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am: Remove intermediate libobjc_.la library.
	(objc.dll): Use the .lo suffix on objc_thread_lo.

1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (objc.dll): Use .o suffix to distinguish from
	other files.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (objc.dll): Rename libobjc.a to libobjcdll.a.
	(install-data-local): Accomodate.  Use objc.dll.c instead of dllinit.c.
	Put rules above in an USEDLL automake conditional (removing the
	shell logic in the latter).

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am: Remove manual constructor stuff.
	(CPPFLAGS): Don't define for DLL import/export.  (Use
	BUILDING_LIBOBJC to select in externvar.h.in).
	(DLLOBJS): Use .lo files.
	(objc.dll): Use .lo suffix for dllinit, to avoid wildcards